[tool.poetry]
name = "survey-psychology"
version = "0.1.0"
description = "Survey"
authors = ["Romans Prokopjevs"]

[tool.poetry.dependencies]
python = "~3.12.7"
pymc = "^5.18.2"
tqdm = "^4.67.1"
pandas = "^1.4.4"
pandas-gbq = "^0.19.2"
numpy = "^1.22.1"
pyarrow = "^18.1.0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scipy = "^1.14.0"
tabulate = "^0.9.0"
pyreadstat = "^1.2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
ipykernel = "^6.28.0"
jupyter = "^1.0.0"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
